--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@caesium/hook-notifications",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "Tabs component for React",
   "main": "lib/component-tabs.js",
   "scripts": {
@@ -9,7 +9,7 @@
   },
   "keywords": [
     "React",
-    "Notifications"
+    "Tabs"
   ],
   "author": "Adam Laycock <adam@arcath.net>",
   "license": "MIT",
