--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "lib/component-tabs.js",
   "scripts": {
     "test": "jest",
-    "prepublishOnly": "tsc"
+    "build": "tsc"
   },
   "keywords": [
     "React",
@@ -14,14 +14,15 @@
   "author": "Adam Laycock <adam@arcath.net>",
   "license": "MIT",
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.0.4",
-    "@types/react": "^16.9.49",
-    "@types/uuid": "^8.3.0",
-    "jest": "^26.4.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "ts-jest": "^26.4.0",
-    "typescript": "^4.0.3"
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.3.0",
+    "@types/react": "^18.0.14",
+    "@types/uuid": "^8.3.4",
+    "jest": "^28.1.2",
+    "jest-environment-jsdom": "^28.1.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "ts-jest": "^28.0.5",
+    "typescript": "^4.7.4"
   }
 }
